Optimizacion y buenas practicas, ajustes varios

--- a/angular.json
+++ b/angular.json
@@ -48,12 +48,19 @@
                   "maximumError": "8kB"
                 }
               ],
+              "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.development.ts",
+                    "with": "src/environments/environment.prod.ts"
+                  }
+                ],
               "outputHashing": "all"
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": []
             }
           },
           "defaultConfiguration": "production"
