--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.510.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.23.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
